--- a/test.html
+++ b/test.html
@@ -19,28 +19,34 @@
                 <div class="col-sm4">
                     <img src="/assets/images/icone-ty-bugale.png"></img>
                 </div>
+
+
                 <div class="col-sm8">
-                    <nav>
-                        <ul>
-                            <li>
-                                La crèche
-                            </li>
-                            <li>
-                                Le rôle de parent
-                            </li>
-                            <li>
-                                Le quotidien
-                            </li>
-                            <li>
-                                Informations pratiques
-                            </li>
+                    <div class="row justify-content-end">
+                        <form><input type="text" value="Rechercher"> </form>
+                    </div>
 
+                     <div class="row">
+                        <nav class="navbar navbar-expand-lg">
+                                <ul class="navbar-nav" >
+                                    <li class="nav-item bg-red m-3 p-1">
+                                        <h2>La crèche</h2>
+                                    </li>
+                                    <li class="nav-item bg-blue m-3 p-1">
+                                        <h2>Le rôle de parent</h2>
+                                    </li>
+                                    <li class="nav-item bg-green m-3 p-1">
+                                        <h2>Le quotidien</h2>
+                                    </li>
+                                    <li class="nav-item bg-orange m-3 p-1">
+                                        <h2>Infos pratiques</h2>
+                                    </li>
 
+                                </ul>
+                           </nav>
 
-                        </ul>
-                    </nav>
+                    </div>
                 </div>
-
             </div>
         </header>
         </div>
