--- a/home.html
+++ b/home.html
@@ -13,44 +13,44 @@
         <title>Crèche Ty Bugale</title>
     </head>
     <body>
-        <div class="container my-2">
-        <header>
-            <div class="row" >
-                <div class="col-sm4">
-                    <img src="/assets/images/icone-ty-bugale.png"></img>
-                </div>
 
+    <!--<header>-->
 
-                <div class="col-sm8">
-                    <div class="row justify-content-end">
-                        <form><input type="text" value="Rechercher"> </form>
-                    </div>
+    <header class="container my-2 d-flex">
 
-                     <div class="row">
-                        <nav class="navbar navbar-expand-lg">
-                                <ul class="navbar-nav" >
-                                    <li class="nav-item bg-red m-3 p-1">
-                                        <h2>La crèche</h2>
-                                    </li>
-                                    <li class="nav-item bg-blue m-3 p-1">
-                                        <h2>Le rôle de parent</h2>
-                                    </li>
-                                    <li class="nav-item bg-green m-3 p-1">
-                                        <h2>Le quotidien</h2>
-                                    </li>
-                                    <li class="nav-item bg-orange m-3 p-1">
-                                        <h2>Infos pratiques</h2>
-                                    </li>
-
-                                </ul>
-                           </nav>
-
-                    </div>
-                </div>
+        <div  class="d-flex">
+                <img src="/assets/images/icone-ty-bugale.png"></img>
             </div>
-        </header>
-        </div>
-        <div class="container text-center">
+
+            <div class="flex-column w-100">
+                <div class="d-flex flex-row-reverse">
+
+                    <form><input type="text" value="Rechercher"> </form>
+                </div>
+                <nav class="d-flex w-100 h-100 align-bottom navbar navbar-expand-lg ">
+                    <ul class="navbar-nav" >
+                        <li class="nav-item bg-red m-3 p-1">
+                            <h2>La crèche</h2>
+                        </li>
+                        <li class="nav-item bg-blue m-3 p-1">
+                            <h2>Le rôle de parent</h2>
+                        </li>
+                        <li class="nav-item bg-green m-3 p-1">
+                            <h2>Le quotidien</h2>
+                        </li>
+                        <li class="nav-item bg-orange m-3 p-1">
+                            <h2>Infos pratiques</h2>
+                        </li>
+
+                    </ul>
+                </nav>
+
+            </div>
+    </header>
+    <!--</header>-->
+        <div class="container my-2 d-flex">
+
+    <div class="container text-center">
             <section>
                 <div class="row"><p>
                     <br/>
