--- a/test2.html
+++ b/test2.html
@@ -14,40 +14,36 @@
     </head>
     <body>
 
-        <div class="container my-2">
+        <div class="container my-2 d-flex">
 
-        <div class="row">
-            <div class="col">
-
+                <div  class="d-flex">
                     <img src="/assets/images/icone-ty-bugale.png"></img>
-
-            </div>
-
-            <div class="col">
-                <div class="row flex-row-reverse">
-
-                    <form><input type="text" value="Rechercher"> </form>
                 </div>
-                <div class="row justify-content-between">
-                            <nav class="navbar navbar-expand-lg">
-                                    <ul class="navbar-nav" >
-                                        <li class="nav-item bg-red m-3 p-1">
-                                            <h2>La crèche</h2>
-                                        </li>
-                                        <li class="nav-item bg-blue m-3 p-1">
-                                            <h2>Le rôle de parent</h2>
-                                        </li>
-                                        <li class="nav-item bg-green m-3 p-1">
-                                            <h2>Le quotidien</h2>
-                                        </li>
-                                        <li class="nav-item bg-orange m-3 p-1">
-                                            <h2>Infos pratiques</h2>
-                                        </li>
 
-                                    </ul>
-                               </nav>
+                <div class="flex-column">
+                    <div class="d-flex flex-row-reverse">
+
+                        <form><input type="text" value="Rechercher"> </form>
+                    </div>
+                    <nav class="d-flex h-100 align-bottom navbar navbar-expand-lg ">
+                            <ul class="navbar-nav" >
+                                <li class="nav-item bg-red m-3 p-1">
+                                    <h2>La crèche</h2>
+                                </li>
+                                <li class="nav-item bg-blue m-3 p-1">
+                                    <h2>Le rôle de parent</h2>
+                                </li>
+                                <li class="nav-item bg-green m-3 p-1">
+                                    <h2>Le quotidien</h2>
+                                </li>
+                                <li class="nav-item bg-orange m-3 p-1">
+                                    <h2>Infos pratiques</h2>
+                                </li>
+
+                            </ul>
+                       </nav>
+
                 </div>
-            </div>
         </div>
 
     </body>
